# bq-volatility-models

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
docs/: index.md  modules.md
src/bq_volatility_models/: __init__.py  calibrate.py  data.py  model.py  pipeline.py  plot.py  utils.py
tests/: __init__.py  test_data.py  test_foo.py
