[project]
name = "bq-volatility-models"
version = "0.0.1"
description = "BayesQuad for calibrating stochastic volatility models."
authors = [{ name = "Saad Hamid", email = "saadhamid96@gmail.com" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.9,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://saadhamid96.github.io/bq-volatility-models/"
Repository = "https://github.com/saadhamid96/bq-volatility-models"
Documentation = "https://saadhamid96.github.io/bq-volatility-models/"

[dependency-groups]
dev = [
    "pytest",
    "pre-commit",
    "tox-uv",
    "deptry",
    "mypy",
    "pytest-cov",
    "ruff",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[tool.mypy]
files = ["src","tests"
]
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 88
fix = true

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]

